# ipo-audit-system

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .vercelignore  CLAUDE.md  Dockerfile  HF_SYNC.md  LICENSE  README.md  pyproject.toml  requirements-vercel.txt  vercel.json
.claude/skills/: audit-procedures.md
.github/workflows/: ci.yml  deploy-vercel.yml  sync-hf.yml
.streamlit/: config.toml
_probe/: README.md  round32_repro.py  round36_idor_runner.py  streamlit_smoke.mjs
_probe_shots/: round32.json  round36_probe_log.txt  round36_probe_summary.md  round36_streamlit.json  round36_streamlit_log.txt
api/: index.py
app/: main.py
app/api/: _helpers.py  account_audit.py  audit_cycles.py  auth.py  comprehensive.py  confirmations.py  contracts.py  inventory.py  ipo_specials.py  knowledge_base.py  notifications.py  projects.py  regulations.py  regulatory_cases.py  related_parties.py  report_templates.py  reports.py  sales_ledger.py  sentiment.py  team_management.py  workbooks.py
app/core/: config.py  database.py  logging.py
app/models/: account_audit.py  audit.py  auth.py  confirmation.py  contracts.py  db_models.py  inventory.py  notification.py  related_parties.py  report_template.py  sales_ledger.py  sentiment.py  team_management.py
app/models/db/: __init__.py  account_audit.py  audit_cycles.py  auth.py  confirmation.py  inventory.py  ipo_specials.py  notification.py  project.py  regulations.py  related_parties.py  report_template.py  sentiment.py  team_management.py  workpaper.py
app/services/: ai_analysis.py  ai_analysis_engine.py  audit_note_generator.py  erp_adapters.py  excel_parser.py  regulation_scraper.py  regulatory_case_service.py  regulatory_scraper.py  report_generator.py  trial_balance.py  trial_balance_engine.py  workbook_generator.py
app/services/account_audit/: __init__.py
app/services/audit_cycles/: __init__.py
app/services/auth/: __init__.py  approval.py  archive.py  audit_log.py  bootstrap.py  dependencies.py  jwt.py  password.py  rbac.py  service.py  tenant.py
app/utils/: datetime_helpers.py  db_helpers.py  like_helpers.py  upload_safety.py
app/web/: __init__.py  routes.py
docs/: BUGS_2026_06_18_SCAN.md  BUGS_FOUND.md  COMPREHENSIVE_WORKPAPER_TEMPLATE_SPEC.md  DATA_FORMAT_SPEC.md  usage.md
docs/screenshots/: README.md
frontend/: _http.py  app.py  pages_account_audit.py  pages_audit_cycles.py  pages_auth.py  pages_comprehensive.py  pages_confirmations.py  pages_contracts.py  pages_inventory.py  pages_ipo_specials.py  pages_knowledge_base.py  pages_notification.py  pages_regulations.py  pages_related_parties.py  pages_report_templates.py  pages_sales_ledger.py  pages_sentiment.py  pages_team_management.py
frontend/_components/: __init__.py  charts.py  data_grid.py  download.py  feishu_components.py  feishu_theme.py  period_picker.py  project_picker.py  safe_render.py
scripts/: get_short_path.bat  git_push.sh  short_path.txt  start_hf_space.sh  sync.sh
templates/: .gitkeep
tests/: conftest.py  smoke_inventory.py  test_account_audit.py  test_account_audit_idor_p0.py  test_aging_engine_p0.py  test_ai_analysis_robustness.py  test_ai_inferer_p0.py  test_audit_cycles.py  test_audit_cycles_p0.py  test_audit_note_generator_p0.py  test_auth.py  test_builtin_rules.py  test_bulk_audit_p0.py  test_completion_cost_p0.py  test_comprehensive_frontend.py  test_comprehensive_parser.py  test_confirm_recommendation_p0.py  test_confirmation_p0.py  test_confirmation_p0_fixes.py  test_confirmations_summary_p0.py  test_contract_analysis.py  test_contracts_async_io_p0.py  test_count_plan_date_p0.py  test_count_sheet_p0.py  test_csrf_p0.py  test_datetime_tz_p1.py  test_debug.py  test_deepseek_nested_json_p0.py  test_delete_member_p0.py  test_disclosure_checker_p0.py  test_e2e_comprehensive.py  test_erp_adapters.py  test_field_mapper.py  test_fill_engine.py  test_firm_template_service.py  test_frontend_key_batch_p0.py  test_frontend_key_p1.py  test_idor_p0.py  test_idor_round24.py  test_idor_round29.py  (+60 more)
tests/_helpers/: __init__.py  auth.py  db.py  http.py  idor.py  pagination.py
(+84 files in other folders)
