[project]
name = "ipo-audit-system"
version = "0.2.0"
description = "IPO审计系统 - 自动化底稿生成与数据分析工具"
authors = [{name = "KIMI", email = "audit@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["audit", "ipo", "accounting", "financial-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.2",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "python-docx>=1.1.0",
    "reportlab>=4.0.0",
    "pdfplumber>=0.10.0",
    "tabulate>=0.9.0",
    "altair>=5.1.0",
    "streamlit>=1.30.0",
    # 知识库 — EPUB 解析 (PDF / DOCX / TXT 已由 pdfplumber / python-docx 覆盖)
    "ebooklib>=0.18",
    # 综合底稿 — 审计手册规则库使用 YAML 维护
    "pyyaml>=6.0.1",
    # 舆情跟踪 (Sentiment Tracking) — v0.2 新增
    "apscheduler>=3.10.4",     # 内嵌调度器
    "feedparser>=6.0.11",      # RSS 解析
    "tenacity>=8.2.3",         # 通用重试装饰器
]

[project.optional-dependencies]
# 重型 OCR / 浏览器自动化依赖,按需启用 (CI 与最小安装默认不装).
# 本地需要扫描件 OCR 时: uv pip install ".[ocr]"
# 需要 selenium 抓监管案例时: uv pip install ".[scraper]"
ocr = [
    "paddleocr>=2.7.0",
]
scraper = [
    "selenium>=4.15.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.editable]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

# P0 修复: pytest-asyncio 默认 strict 模式, async def test 没加 @pytest.mark.asyncio
# 会被静默跳过 (false negative). 改 auto 后所有 async def test 自动识别.
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
